# pokerena

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
config/: agents.example.yaml  server.local.example.yaml
scripts/: bootstrap-node-deps.sh  bootstrap-showdown.sh
src/pokerena/: __init__.py  __main__.py  agent.py  calc.py  cli.py  config.py  pricing.py  runtime_env.py  showdown.py  transcript.py  transcript_viewer.py
src/pokerena/schemas/: damage-request.v1.json  damage-result.v1.json  decision.v1.json  turn-context.v1.json
tests/: test_agent.py  test_calc.py  test_cli.py  test_config.py  test_showdown.py  test_transcript_viewer.py
tools/: damage-calc-cli.cjs  damage-calc-lib.cjs  damage-calc-worker.cjs
